# data-mining

./: .gitignore  README.md  flake.nix
code/: README.md  pyproject.toml
code/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
code/catboost_info/test/: events.out.tfevents
code/models/: base.py  registry.py  train.py  xgboost_base.py
code/models/catboost/: model.py
code/models/catboost/artifacts/: metadata.json  model.cbm
code/models/ensemble/: model.py
code/models/ensemble/artifacts/: metadata.json
code/models/lightgbm/: model.py
code/models/lightgbm/artifacts/: metadata.json  model.txt  params.json
code/models/mlp/: model.py
code/models/mlp/artifacts/: metadata.json  model.joblib
code/models/quantile/: model.py
code/models/quantile/artifacts/: metadata.json  model.json
code/models/ranker/: model.py
code/models/ranker/artifacts/: metadata.json  model.json  sorted_scores.npy
code/models/xgboost/: model.py
code/models/xgboost/artifacts/: metadata.json  model.json
code/scripts/: analyze_fairness.py  analyze_predictions.py  app.py  benchmark_autogluon.py  predict.py  prepare.py  process.py  train.py
docs/: Team_3_Project_Outlines.tex  refs.bib
