[project]
name = "mebeauty-analysis"
version = "0.1.0"
description = "Facial attractiveness prediction from geometric beauty markers"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "optuna>=4.8.0",
    "flask>=3.1.3",
    "gdown>=5.0",
]
